[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cudem"
version = "3.0.0"
description = "Modules and scripts for processing Digital Elevation Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
]
maintainers = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy",
    "scipy",
    "pyproj",
    "requests[security]",
    "lxml",
    "matplotlib",
    "laspy[lazrs,laszip]",
    "h5py",
    "boto3",
    "tqdm",
    "mercantile",
    "utm",
    "pandas",
    "netCDF4",
    "scikit-image",  # For bilateral filtering in grits
]

[project.optional-dependencies]
gmt = ["pygmt"]  # Optional GMT bindings

[project.scripts]
# Core Modules
fetches = "cudem.fetches.fetches:fetches_cli"
dlim = "cudem.datalists.dlim:datalists_cli"
waffles = "cudem.waffles.waffles:waffles_cli"
grits = "cudem.grits.grits:grits_cli"
pointz = "cudem.pointz:pointz_cli"

# Utilities
regions = "cudem.regions:regions_cli"
vdatums = "cudem.vdatums:vdatums_cli"
perspecto = "cudem.perspecto.perspecto:perspecto_cli"

# Globato
globato_converter = "cudem.globato.globato_converter:globato_converter_cli"
spatial_metadata = "cudem.globato.spatial_metadata:spatial_metadata_cli"

# Specific Fetch Tools
bing_bfp = "cudem.fetches.bingbfp:bing_bfp_cli"
osm_coast = "cudem.fetches.osm:osm_coast_cli"


[tool.setuptools.package-data]
cudem = [
    "data/*_errs.dat.gz", 
    "data/*.geojson", 
    "fetches/data/*.geojson"
]

[project.urls]
Homepage = "https://github.com/ciresdem/cudem"
Issues = "https://github.com/ciresdem/cudem/issues"